# sPHNN

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  todo.md
data/additive_manufacturing_surrogate/: README.md
data/cascaded_tanks/: README.md
data/thermal_food_processing_surrogate/: data.npz
dynax/: __init__.py  activations.py  constraints.py  data_handling.py  evaluation.py  losses.py  sphnn_tools.py  training.py
dynax/derivative_models/: __init__.py  _base_model.py  _isphs.py  _stable_NODE.py
dynax/function_models/: _FICNN.py  _LyapunovNN.py  __init__.py  _linear.py  _mlp.py  matrices.py
dynax/integration_models/: __init__.py  _odesolver.py
experiments/: model_ingredient.py  test_experiment.py
experiments/cascaded_tanks/: cascaded_tanks.ipynb
experiments/cascaded_tanks/results/run_0/: hyperparameters.json
experiments/interpreting_random_sphnns/: interpreting_random_sphnns.ipynb
experiments/spinning_rigid_body/: spinning_rigid_body.ipynb
experiments/spinning_rigid_body/results/run_0/: hyperparameters.json
experiments/thermal_field_data/: additive_manufacturing_surrogate.ipynb
experiments/thermal_field_data/results/run_0/: hyperparameters.json
experiments/thermal_food_processing_surrogate/: thermal_food_processing_surrogate_A.ipynb  thermal_food_processing_surrogate_B.ipynb
experiments/thermal_food_processing_surrogate/noiseless/: thermal_food_processing_surrogate_A.ipynb  thermal_food_processing_surrogate_B.ipynb
experiments/thermal_food_processing_surrogate/noisy/: main.py  noisy_thermal_food_processing_surrogate_evaluation.ipynb
experiments/thermal_food_processing_surrogate/noisy/noisy_chicken_src/: dataloader.py  datareader.py  models.py  training.py
experiments/thermal_food_processing_surrogate/results/run_A0/: hyperparameters.json
experiments/thermal_food_processing_surrogate/results/run_B0/: hyperparameters.json
sphnn/: __init__.py
sphnn/models/: __init__.py  bphnn.py  neuralode.py  normalization.py  pod_latent_space.py  stable_neuralode.py
util/: colors.py  model_meta.py
(+6373 files in other folders)
